--- a/src/content/docs/fumadocs/fumadocs-example.mdx
+++ b/src/content/docs/fumadocs/fumadocs-example.mdx
@@ -67,6 +67,10 @@ export function baseOptions(): BaseLayoutProps {
 \app\og\docs\[...slug]\route.tsx 搜索 `site=`，更改
 
 
+## 首页界面相关
+
+https://github.com/fuma-nama/fumadocs/issues/2720
+
 ## 数学公式支持
 
 运行
