--- a/src/content/docs/astro-starlight/astro-starlight-example.mdx
+++ b/src/content/docs/astro-starlight/astro-starlight-example.mdx
@@ -103,6 +103,385 @@ sidebar: [
 ],
 ```
 
-## 旁白
+## Starlight Frontmatter 配置选项
 
-https://starlight.astro.build/zh-cn/components/asides/
+Starlight 支持在 frontmatter 中配置多种选项来自定义页面行为和元数据。
+
+### 基础配置
+
+#### `title`（必填）
+
+页面的标题，显示在页面顶部、浏览器标签和元数据中。
+
+```yaml
+---
+title: "页面标题"
+---
+```
+
+#### `description`
+
+页面的描述信息，用于 SEO 和社交媒体预览。
+
+```yaml
+---
+description: "这是页面的描述信息"
+---
+```
+
+#### `slug`
+
+页面的 URL 路径标识符。如果不设置，Starlight 会根据文件路径自动生成。
+
+```yaml
+---
+slug: "my-page-slug"
+---
+```
+
+### 侧边栏配置（`sidebar`）
+
+#### `sidebar.order`
+
+控制侧边栏中页面的显示顺序。数值越小，显示越靠前。
+
+```yaml
+---
+sidebar:
+  order: 1  # 数值越小越靠前
+---
+```
+
+#### `sidebar.badge`
+
+在侧边栏中显示徽章。
+
+```yaml
+---
+sidebar:
+  badge:
+    text: "Demo"      # 徽章文本
+    variant: "note"   # 徽章颜色
+---
+```
+
+**Badge 颜色选项（`variant`）：**
+* `tip` - 紫色
+* `note` - 蓝色
+* `danger` - 红色
+* `caution` - 橙色
+* `success` - 绿色
+* `default` - 主题强调色
+
+### 页面模板（`template`）
+
+控制页面的布局模板。
+
+```yaml
+---
+template: splash  # 使用启动页模板（隐藏侧边栏）
+---
+```
+
+可选值：
+* `splash` - 启动页模板（隐藏侧边栏）
+* 不设置或注释掉 - 使用默认模板（显示侧边栏）
+
+### 英雄区块（`hero`）
+
+用于首页或重要页面的英雄区块配置。
+
+```yaml
+---
+hero:
+  tagline: "欢迎使用 Starlight"
+  image:
+    file: ../../assets/avatar.png
+  actions:
+    - text: "开始使用"
+      link: /docs/getting-started
+      icon: right-arrow
+      variant: primary
+    - text: "查看文档"
+      link: /docs/guide
+      icon: external
+      variant: minimal
+---
+```
+
+**Actions 配置：**
+* `text` - 按钮文本
+* `link` - 链接地址
+* `icon` - 图标名称（如 `right-arrow`、`external` 等）
+* `variant` - 按钮样式（`primary`、`secondary`、`minimal`）
+
+### 目录配置（`tableOfContents`）
+
+控制页面右侧目录的显示。
+
+```yaml
+---
+# 禁用目录
+tableOfContents: false
+
+# 或限制标题级别
+tableOfContents:
+  minHeadingLevel: 2  # 最小标题级别（H2）
+  maxHeadingLevel: 4  # 最大标题级别（H4）
+---
+```
+
+### 编辑链接（`editUrl`）
+
+覆盖全局的"编辑页面"链接。
+
+```yaml
+---
+# 禁用编辑链接
+editUrl: false
+
+# 或设置自定义编辑 URL
+editUrl: "https://github.com/user/repo/edit/main/content/docs/page.md"
+---
+```
+
+### 自定义 Head 标签（`head`）
+
+向页面的 `<head>` 部分添加额外的标签。
+
+```yaml
+---
+head:
+  - tag: meta
+    attrs:
+      name: keywords
+      content: "Astro, Starlight, 文档"
+  - tag: link
+    attrs:
+      rel: "canonical"
+      href: "https://example.com/page"
+---
+```
+
+### 完整配置示例
+
+```yaml
+---
+title: "基于Starlight的写作扩展"
+description: "Starlight 组件使用指南和配置说明"
+slug: writing-standards/starlight-writing-extensions
+sidebar:
+  order: 1
+  badge:
+    text: "Demo"
+    variant: "note"
+tableOfContents:
+  minHeadingLevel: 2
+  maxHeadingLevel: 4
+editUrl: false
+head:
+  - tag: meta
+    attrs:
+      name: keywords
+      content: "Starlight, MDX, 组件"
+---
+```
+
+## 静态图片资源管理
+
+在 Astro Starlight 中，有多种方式管理静态图片资源。
+
+### 1. 使用 `src/assets/` 目录（推荐）
+
+将图片放在 `src/assets/` 目录中，使用相对路径引用。
+
+**目录结构：**
+```
+src/
+  assets/
+    avatar.png
+    logo.svg
+    images/
+      screenshot.png
+  content/
+    docs/
+      page.mdx
+```
+
+**在 Frontmatter 中引用（Hero 图片）：**
+
+```yaml
+---
+hero:
+  image:
+    file: ../../assets/avatar.png  # 相对路径
+---
+```
+
+**在 Markdown/MDX 中引用：**
+
+```mdx
+![图片描述](../../assets/avatar.png)
+```
+
+**使用 Astro 的 Image 组件（需要导入）：**
+
+```mdx
+---
+import { Image } from 'astro:assets'
+import avatar from '../../assets/avatar.png'
+---
+
+<Image src={avatar} alt="头像" />
+```
+
+### 2. 使用 `public/` 目录（根路径引用）
+
+将图片放在 `public/` 目录中，可以直接使用根路径引用。
+
+**目录结构：**
+```
+public/
+  images/
+    logo.png
+    screenshot.jpg
+  favicon.svg
+```
+
+**引用方式（注意 base 路径）：**
+
+如果你的 `astro.config.mjs` 中设置了 `base: 'docs'`：
+
+```mdx
+<!-- 在 Markdown/MDX 中 -->
+![图片描述](/docs/images/logo.png)
+
+<!-- 或使用 HTML -->
+<img src="/docs/images/logo.png" alt="Logo" />
+```
+
+如果没有设置 `base`：
+
+```mdx
+![图片描述](/images/logo.png)
+```
+
+**在 Frontmatter 中（Hero 图片）：**
+
+```yaml
+---
+hero:
+  image:
+    file: /images/logo.png  # 从 public 目录的根路径
+---
+```
+
+### 3. 外部图片（CDN）
+
+使用外部 CDN 链接，无需本地存储。
+
+```mdx
+![图片描述](https://cdn.example.com/image.png)
+```
+
+### 4. 图片路径配置说明
+
+#### 相对路径 vs 绝对路径
+
+**相对路径**（从 `src/assets/` 引用）：
+- ✅ 会被 Astro 优化处理（压缩、格式转换等）
+- ✅ 支持 TypeScript 类型检查
+- ✅ 构建时检查图片是否存在
+- ❌ 需要计算相对路径
+
+**绝对路径**（从 `public/` 引用）：
+- ✅ 路径简单直观
+- ✅ 适合大量静态资源
+- ❌ 不会被优化处理
+- ❌ 需要手动处理 base 路径
+
+#### Base 路径处理
+
+如果你的项目配置了 `base: 'docs'`（在 `astro.config.mjs` 中）：
+
+```javascript
+export default defineConfig({
+  base: 'docs',  // 所有路径都需要加上 /docs 前缀
+  // ...
+})
+```
+
+那么所有从 `public/` 引用的图片都需要加上 `/docs` 前缀：
+
+```mdx
+<!-- ✅ 正确 -->
+![图片](/docs/images/logo.png)
+
+<!-- ❌ 错误（会找不到图片） -->
+![图片](/images/logo.png)
+```
+
+### 5. 完整示例
+
+#### 示例 1：使用 src/assets（推荐用于少量图片）
+
+```mdx
+---
+title: "我的页面"
+---
+
+<!-- 方式 1：Markdown 语法 -->
+![头像](../../assets/avatar.png)
+
+<!-- 方式 2：Astro Image 组件（需要导入） -->
+---
+import { Image } from 'astro:assets'
+import avatar from '../../assets/avatar.png'
+---
+
+<Image src={avatar} alt="头像" width={200} height={200} />
+```
+
+#### 示例 2：使用 public 目录（适合大量静态资源）
+
+```mdx
+---
+title: "我的页面"
+---
+
+<!-- 如果 base: 'docs' -->
+![Logo](/docs/images/logo.png)
+
+<!-- 如果没有 base -->
+![Logo](/images/logo.png)
+```
+
+#### 示例 3：Hero 图片配置
+
+```yaml
+---
+title: "首页"
+hero:
+  image:
+    # 从 src/assets 引用（相对路径）
+    file: ../../assets/avatar.png
+    
+    # 或从 public 引用（绝对路径，注意 base）
+    # file: /images/hero.png
+---
+```
+
+### 6. 最佳实践
+
+1. **少量图片**：使用 `src/assets/`，享受自动优化
+2. **大量静态资源**：使用 `public/`，路径更简单
+3. **外部图片**：使用 CDN，减少构建体积
+4. **Hero 图片**：优先使用 `src/assets/`，确保优化
+5. **注意 base 路径**：如果配置了 `base`，所有 `public/` 路径都需要加上 base 前缀
+
+### 7. 图片优化建议
+
+- 使用 WebP 格式以获得更好的压缩比
+- 大图片使用 CDN 或图片优化服务
+- 使用 Astro 的 Image 组件自动优化本地图片
+- 为所有图片添加有意义的 `alt` 文本
