--- a/src/content/docs/astro-starlight/starlight-writing-extensions.mdx
+++ b/src/content/docs/astro-starlight/starlight-writing-extensions.mdx
@@ -15,107 +15,12 @@ import { Steps } from '@astrojs/starlight/components'
 import { Tabs, TabItem } from '@astrojs/starlight/components'
 import { Icon } from '@astrojs/starlight/components'
 
-## 结论前置
-
-这套符号体系高度依赖特定平台的渲染支持，一旦切换平台便会失效。这本质上是文档工具的一种"软性锁定"，通过培养用户的表达习惯来增加迁移成本。因此，最好将其整理为一份独立的备忘手册，以便在不同环境中随时取用。
-
 :::tip
 **重要提示**：本文档中的所有组件示例都需要在 `.mdx` 文件中使用，`.md` 文件不支持 JSX 组件。所有 `import` 语句必须放在文件顶部。
 :::
 
-## CSS 选择器精确匹配技巧
+这套符号体系高度依赖特定平台的渲染支持，一旦切换平台便会失效。相当于是"软锁定"增加迁移成本。另外说一句：当你阅读到这篇内容时，Astro-Starlight 的短板也就显露出来了，就是当目录过长溢出整页时，不能做到自动滚动目录。
 
-### 如何只选择侧边栏中的 Badge？
-
-如果你只想针对侧边栏中的 `sl-badge` 设置样式，而不影响页面内容中的 badge，需要使用**后代选择器**来限定范围：
-
-```css
-/* ✅ 方法 1：使用侧边栏 ID（最推荐，最稳定） */
-#starlight__sidebar .sl-badge {
-    font-size: 10px !important;
-}
-
-/* ✅ 方法 2：使用侧边栏类名 */
-.sl-sidebar .sl-badge {
-    font-size: 10px !important;
-}
-
-/* ✅ 方法 3：使用导航属性 */
-nav[aria-label="Main"] .sl-badge {
-    font-size: 10px !important;
-}
-```
-
-**选择器优先级说明：**
-- `.sl-badge` - 会影响所有 badge（包括侧边栏和内容区）
-- `#starlight__sidebar .sl-badge` - 只影响侧边栏内的 badge（ID 选择器，最稳定）
-- `.sl-sidebar .sl-badge` - 只影响侧边栏内的 badge（类选择器）
-- `nav[aria-label="Main"] .sl-badge` - 只影响主导航内的 badge（属性选择器）
-
-### 其他精确选择示例
-
-```css
-/* 只选择侧边栏中的链接 - 使用 ID（最稳定） */
-#starlight__sidebar a {
-    font-size: 16px;
-}
-
-/* 只选择侧边栏中的链接 - 使用类名 */
-.sl-sidebar a {
-    font-size: 16px;
-}
-
-/* 只选择内容区域的标题 */
-.sl-content h1 {
-    font-size: 24px;
-}
-
-/* 只选择头部中的按钮 */
-.sl-header button {
-    /* 样式 */
-}
-
-/* 只选择特定容器内的元素 */
-.sl-content .sl-badge {
-    /* 只影响内容区的 badge，不影响侧边栏 */
-}
-```
-
-### Starlight 常用 ID 选择器
-
-Starlight 提供了一些稳定的 ID 选择器，优先使用这些：
-
-```css
-/* 侧边栏 */
-#starlight__sidebar {
-    /* 样式 */
-}
-
-/* 目录 */
-#starlight__on-this-page {
-    /* 样式 */
-}
-
-/* 使用示例 */
-#starlight__sidebar .sl-badge {
-    font-size: 10px;
-}
-
-#starlight__sidebar a {
-    font-size: 16px;
-}
-```
-
-### 选择器优先级规则
-
-CSS 选择器的优先级（从低到高）：
-1. 标签选择器：`div`、`a`、`h1`
-2. 类选择器：`.sl-badge`、`.sl-sidebar`
-3. ID 选择器：`#starlight__on-this-page`
-4. 属性选择器：`[data-open-modal]`
-5. 组合选择器：`.sl-sidebar .sl-badge`（更具体 = 更高优先级）
-
-**原则**：选择器越具体，优先级越高，越不容易被覆盖。
 
 ## 1. 盘白（Asides）
 
@@ -159,6 +64,26 @@ CSS 选择器的优先级（从低到高）：
 这是一个危险警告框，用于显示可能导致严重后果的操作。
 :::
 
+
+### 组件完整导入
+
+以下是一个完整的 `.mdx` 文件模板，包含所有组件的导入：
+
+```mdx
+---
+title: "页面标题"
+slug: page-slug
+---
+
+import { Badge } from '@astrojs/starlight/components'
+import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components'
+import { FileTree } from '@astrojs/starlight/components'
+import { LinkButton } from '@astrojs/starlight/components'
+import { Steps } from '@astrojs/starlight/components'
+import { Tabs, TabItem } from '@astrojs/starlight/components'
+import { Icon } from '@astrojs/starlight/components'
+```
+
 ## 2. 徽章（Badges）
 
 徽章用于标记状态、版本或重要标签。
@@ -175,7 +100,7 @@ import { Badge } from '@astrojs/starlight/components'
 - <Badge text="实验性" variant="danger" />
 ```
 
-### 参数说明
+**参数说明**
 
 - `text`: 徽章显示的文本
 - `variant`: 样式变体，可选值：`tip`、`caution`、`note`、`success`、`danger`
@@ -313,49 +238,9 @@ import { Icon } from '@astrojs/starlight/components'
 图标名称可以使用 Starlight 内置图标或 Seti UI 图标集。更多图标请参考 [Starlight 图标文档](https://starlight.astro.build/components/icon/)。
 :::
 
-## 5. 链接按钮（Link Buttons）
 
-链接按钮用于创建醒目的操作链接。
 
-### 代码示例
-
-```mdx
-import { LinkButton } from '@astrojs/starlight/components'
-
-<LinkButton href="/docs/getting-started" icon="rocket">
-  开始使用
-</LinkButton>
-
-<LinkButton href="/docs/api" variant="secondary" icon="external">
-  查看 API
-</LinkButton>
-
-<LinkButton href="/docs/faq" variant="minimal" icon="external">
-  常见问题
-</LinkButton>
-```
-
-### 参数说明
-
-- `href`: 链接地址
-- `icon`: 图标名称
-- `variant`: 样式变体，可选值：`primary`（默认）、`secondary`、`minimal`
-
-### 实际效果
-
-<LinkButton href="/docs/welcome" icon="rocket">
-  开始使用
-</LinkButton>
-
-<LinkButton href="/docs/welcome" variant="secondary" icon="external">
-  查看 API
-</LinkButton>
-
-<LinkButton href="/docs/welcome" variant="minimal" icon="external">
-  常见问题
-</LinkButton>
-
-## 6. 步骤（Steps）
+## 5. 步骤（Steps）
 
 步骤组件用于创建分步骤的指南。
 
@@ -411,7 +296,7 @@ import { Steps } from '@astrojs/starlight/components'
 
 </Steps>
 
-## 7. 标签页（Tabs）
+## 6. 标签页（Tabs）
 
 标签页用于组织多个相关的内容选项。
 
@@ -479,7 +364,7 @@ yarn add starlight-theme-rapide
 
 </Tabs>
 
-## 8. 文件树（File Tree）
+## 7. 文件树（File Tree）
 
 文件树用于展示项目结构。
 
@@ -525,83 +410,3 @@ import { FileTree } from '@astrojs/starlight/components'
 
 </FileTree>
 
-## 9. 详细信息（Details）
-
-详细信息用于创建可折叠的内容区域。
-
-### 代码示例
-
-```mdx
-<details>
-<summary>点击展开查看详细信息</summary>
-
-这里是被折叠的内容，可以包含任何 Markdown 语法，包括：
-
-- 列表项
-- **粗体文本**
-- [链接](https://example.com)
-
-\`\`\`js
-// 甚至代码块
-const example = 'code'
-\`\`\`
-
-</details>
-```
-
-### 实际效果
-
-<details>
-<summary>点击展开查看详细信息</summary>
-
-这里是被折叠的内容，可以包含任何 Markdown 语法，包括：
-
-- 列表项
-- **粗体文本**
-- [链接](https://example.com)
-
-```js
-// 甚至代码块
-const example = 'code'
-```
-
-</details>
-
-## 完整示例模板
-
-以下是一个完整的 `.mdx` 文件模板，包含所有组件的导入：
-
-```mdx
----
-title: "页面标题"
-slug: page-slug
----
-
-import { Badge } from '@astrojs/starlight/components'
-import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components'
-import { FileTree } from '@astrojs/starlight/components'
-import { LinkButton } from '@astrojs/starlight/components'
-import { Steps } from '@astrojs/starlight/components'
-import { Tabs, TabItem } from '@astrojs/starlight/components'
-import { Icon } from '@astrojs/starlight/components'
-```
-
-
-
-## 页面内容
-
-使用上述组件来丰富你的文档内容。
-
-## 注意事项
-
-1. **文件格式**：所有使用组件的文件必须是 `.mdx` 格式，不能是 `.md` 格式
-2. **导入位置**：所有 `import` 语句必须放在文件顶部，frontmatter 之后
-3. **标签闭合**：所有 JSX 标签必须正确闭合，例如 `</LinkButton>` 不能写成 `</LinkButton`
-4. **组件嵌套**：组件可以嵌套使用，但要注意正确的结构
-5. **Markdown 兼容**：组件内部可以使用标准的 Markdown 语法
-
-## 参考资源
-
-- [Starlight 组件文档](https://starlight.astro.build/components/)
-- [Starlight 内容编写指南](https://starlight.astro.build/guides/authoring-content/)
-- [MDX 文档](https://mdxjs.com/)
