--- a/src/content/docs/writing-standards/1-电子书层级内容用语约定.md
+++ b/src/content/docs/writing-standards/1-电子书层级内容用语约定.md
@@ -8,14 +8,14 @@ slug: writing-standards/ebook-content-guidelines
 
 在数字化阅读时代，电子书已成为知识传播的主要载体之一。清晰、一致的内容层级结构不仅能够提升阅读体验，还能帮助读者快速定位和理解信息。本文旨在建立一套统一的电子书层级内容用语约定，规范从导航结构到页面内部元素的命名和使用，确保文档的一致性、可读性和可维护性。
 
-## 第一层：导航结构（左侧大纲）
+## 导航结构（左侧大纲）
 
 导航结构是电子书的骨架，帮助读者在不同页面间快速切换。清晰的导航层级能够降低读者的认知负担，提升内容的可发现性。
 
 * **分类（一级导航）**：用于组织相关主题的页面集合，例如 `fumadocs` 可作为一个分类，包含所有与该文档系统相关的内容。
 * **页面（二级导航）**：分类下的具体文档页面，例如 `fumadocs 目录路由配置` 是 `fumadocs` 分类下的一个具体页面。
 
-## 第二层：页面内部结构（内容大纲）
+## 页面内部结构（内容大纲）
 
 页面内部结构决定了单篇文档的信息组织方式。合理的层级划分能够引导读者循序渐进地理解内容，突出重点信息。
 
@@ -37,68 +37,4 @@ slug: writing-standards/ebook-content-guidelines
 ##### 字节顺序与UTF-8                   <- 细节
 ###### 注意：非ASCII字符的特殊处理     <- 补充说明
 ```
-
-## 文档实践指南
-
-除了内容层级的命名约定，良好的文档实践还包括对URL标识（slug）的规范使用。Slug是文档在网络环境中的唯一标识，直接影响文档的可访问性和SEO表现。
-
-### 1. 使用有意义的 slug
-
-Slug应准确反映文档内容，避免使用无意义的字符或临时名称：
-
-```yaml
-# ✅ 推荐
-slug: getting-started  # 清晰表达文档用途
-slug: api-reference    # 明确指示文档类型
-slug: advanced-topics  # 概括内容范围
-
-# ❌ 不推荐
-slug: page1           # 无意义的编号
-slug: doc-2024-01-01  # 仅包含日期，缺乏内容指示
-slug: temp            # 临时名称，不适合长期使用
-```
-
-### 2. 保持 slug 简洁
-
-简洁的slug便于记忆和传播，避免使用过长的描述性短语：
-
-```yaml
-# ✅ 推荐
-slug: quick-start  # 简洁明了
-
-# ❌ 不推荐
-slug: how-to-get-started-with-our-amazing-product-in-5-minutes  # 过于冗长
-```
-
-### 3. 使用一致的命名风格
-
-选择并坚持一种命名风格，确保整个文档系统的一致性：
-
-```yaml
-# ✅ 推荐：使用连字符（应用广泛，兼容性好）
-slug: api-reference
-slug: user-guide
-
-# 或者使用下划线（保持内部一致即可）
-slug: api_reference
-slug: user_guide
-```
-
-### 4. 在配置文件中优先使用 slug
-
-在文档系统的配置文件（如 `meta.json`）中，优先使用slug引用页面，提高配置的可读性和可维护性：
-
-```json
-{
-  "pages": [
-    "index",
-    "getting-started",  // ✅ 使用有意义的slug
-    "api-reference"     // ✅ 使用有意义的slug
-  ]
-}
-```
-
-## 总结
-
-建立统一的电子书层级内容用语约定，有助于提升文档的专业性、可读性和用户体验。通过规范导航结构、页面内部层级和slug命名，我们可以创建更加一致、易于维护和使用的电子文档。这些约定不仅适用于技术文档，也可以推广到其他类型的电子书籍和在线内容中，为数字化阅读提供更好的体验。
 
