--- a/src/content/docs/welcome/index.mdx
+++ b/src/content/docs/welcome/index.mdx
@@ -2,8 +2,10 @@
 title: My Docs
 ---
 
+import Image from '@components/Image.astro';
+
 <br/>
 <br/>
 <br/>
 <br/>
-![](../../../assets/welcome.png)
+<Image src="./welcome.png" alt="欢迎图片" />
