--- a/src/content/docs/tools/hamster.mdx
+++ b/src/content/docs/tools/hamster.mdx
@@ -166,9 +166,24 @@ import ToolCardGrid from '@components/ToolCardGrid.astro';
     description="网易云音乐 API 备份 + 增强"
     />
     <ToolCard 
-    title="NeteaseCloudMusicApiEnhanced" 
+    title="keep-alive" 
     url="https://github.com/hoochanlon/keep-alive"
     description="免费服务器保活心跳监测"
+    />
+    <ToolCard 
+    title="glass-todo-local" 
+    url="https://github.com/hzc073/glass-todo-local"
+    description="Glass Todo Local 是一款基于 Node.js 开发的轻量级任务管理应用。"
+    />
+    <ToolCard 
+    title="glass-todo-local" 
+    url="https://picx.xpoet.cn/#/upload"
+    description="基于 Github 的 PicX 图床"
+    />
+    <ToolCard 
+    title="Cent" 
+    url="https://github.com/glink25/Cent"
+    description="基于 Github 的记账"
     />
 </ToolCardGrid>
 
