--- a/src/content/docs/tools/hamster.mdx
+++ b/src/content/docs/tools/hamster.mdx
@@ -176,7 +176,7 @@ import ToolCardGrid from '@components/ToolCardGrid.astro';
     description="Glass Todo Local 是一款基于 Node.js 开发的轻量级任务管理应用。"
     />
     <ToolCard 
-    title="glass-todo-local" 
+    title="picx" 
     url="https://picx.xpoet.cn/#/upload"
     description="基于 Github 的 PicX 图床"
     />
