--- a/src/content/docs/welcome/index.mdx
+++ b/src/content/docs/welcome/index.mdx
@@ -1,5 +1,11 @@
 ---
 title: My Docs
+head:
+  - tag: link
+    attrs:
+      rel: preload
+      as: image
+      href: /docs/welcome.png
 ---
 
 import Image from '@components/Image.astro';
