--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -15,6 +15,12 @@ hero:
       icon: right-arrow
       # variant: minimal
 editUrl: false
+head:
+  - tag: link
+    attrs:
+      rel: preload
+      as: image
+      href: /docs/welcome.png
 ---
 
 
