--- a/src/content/docs/cmd/git-cmd.mdx
+++ b/src/content/docs/cmd/git-cmd.mdx
@@ -48,6 +48,16 @@ git reset --hard HEAD~1
 git reset --hard HEAD^
 ```
 
+
+## restore
+
+
+```shell
+# git restore [文件路径1] [文件路径2] ...
+# git restore ：Git 用于恢复工作区文件状态的核心命令，用于撤销未提交的修改
+git restore css/tutorial-content.css css/tutorial-toc.css
+```
+
 ## pull
 
 
