--- a/src/content/docs/cmd/project-cmd.mdx
+++ b/src/content/docs/cmd/project-cmd.mdx
@@ -2,7 +2,7 @@
 title: 项目常用命令
 ---
 
-## node 常用命令
+## node
 
 关闭所有 node 进程
 
@@ -10,9 +10,17 @@ title: 项目常用命令
 taskkill /IM node.exe /F
 ```
 
-vercel
+## vercel
 
 ```
 pnpm i -g vercel
 vercel dev
+```
+
+
+
+## flutter
+
+```
+flutter gen-l10n
 ```
