--- a/src/content/docs/astro-starlight/astro-starlight-encrypted.mdx
+++ b/src/content/docs/astro-starlight/astro-starlight-encrypted.mdx
@@ -5,7 +5,7 @@ editUrl: false
 
 import PasswordWrapper from '@components/PasswordWrapper.astro';
 
-<PasswordWrapper password="example123" passwordSubtitle="密码：example123">
+<PasswordWrapper password="123456" passwordSubtitle="密码：123456">
 
 # 这是加密的内容
 
