--- a/src/content/docs/astro-starlight/astro-starlight-encrypted.mdx
+++ b/src/content/docs/astro-starlight/astro-starlight-encrypted.mdx
@@ -11,11 +11,22 @@ import PasswordWrapper from '@components/PasswordWrapper.astro';
 
 这段内容只有在输入正确密码后才能查看。
 
-## 功能说明
+## 功能及使用
 
 - 支持在 front-matter 中定义密码
-- 客户端加密/解密
-- 自动保存密码到 localStorage
+- 客户端加密/解密，自动保存密码到 localStorage
+
+使用方法
+
+```ts
+import PasswordWrapper from '@components/PasswordWrapper.astro';
+
+<PasswordWrapper password="123456" passwordSubtitle="密码：123456">
+
+这是加密内容
+
+</PasswordWrapper>
+```
 
 </PasswordWrapper>
 
