--- a/src/content/docs/cmd/project-cmd.mdx
+++ b/src/content/docs/cmd/project-cmd.mdx
@@ -17,6 +17,14 @@ pnpm i -g vercel
 vercel dev
 ```
 
+## pnpm
+
+### bash: pnpm: command not found
+
+```
+corepack enable
+corepack prepare pnpm@latest --activate
+```
 
 
 ## flutter
